# artspace

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml
.github/: renovate.json
.github/workflows/: release.yaml  test.yaml
app/: package.json  svelte.config.js
app/src/: hooks.ts
app/src-tauri/: Cargo.toml  build.rs  manifest.json  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: cli.rs  main.rs  model_manager.rs  pipeline.rs
app/src/lib/: Loading.svelte  tauri.ts
app/src/routes/: +layout.js  +layout.svelte  +page.svelte  __layout.svelte  generate.svelte  index.svelte  text.svelte
app/src/routes/generate/: +page.svelte
app/src/routes/text/: +page.svelte
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: ddim_sampler.rs  lib.rs  result.rs  sampler.rs  text_encoder.rs
core/src/ldm/: bert.rs  clip.rs  mod.rs
core/src/model/: auto_encoder.rs  diffusion.rs  mod.rs  super_resolution.rs  text_encoder.rs
core/src/model/clip/: mod.rs
core/src/model/esrgan/: mod.rs
core/src/model/ldm/: bert.rs  clip_latent_diffusion.rs  latent_diffusion.rs  mod.rs  vq.rs
core/src/model/swinir/: mod.rs
core/src/ort/: env.rs  mod.rs  session.rs
ort-sys/: .gitignore  Cargo.toml  build.rs  wrapper.h
ort-sys/src/: cuda_stub.c  cuda_stub.h  cuda_stub_linux.c  cuda_stub_windows.c  lib.rs
scripts/: prepare.py
ui/: .gitignore  package.json  vite.config.js
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/src/routes/: index.svelte
