[package]
name = "artspace-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ort-sys = { path = "../ort-sys" }
rayon = "1.5.3"
scopeguard = "1.1.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
smallvec = "1.9.0"
thiserror = "1.0.33"
tokenizers = "0.11.3"
tsar-rs = { git = "https://github.com/brian14708/tsar", version = "0.1.0" }
nalgebra = "0.31.1"
quad-rs = "0.1.2"
