[package]
name = "artspace-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ort-sys = { path = "../ort-sys" }
rayon = "1.6.1"
scopeguard = "1.1.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
smallvec = "1.10.0"
thiserror = "1.0.37"
tokenizers = "0.13.2"
tsar-rs = { git = "https://github.com/brian14708/tsar", version = "0.1.0" }
quad-rs = "0.1.2"
