[package]
name = "artspace-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "artspace-app"
edition = "2021"
rust-version = "1.57"

[[bin]]
name = "artspace-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.0.4", features = ["codegen"] }

[dependencies]
artspace-core = { path = "../../core" }
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
clap = { version = "3.2.17", features = ["derive"] }
ndarray-npy = "0.8.1"
ndarray = "0.15.6"
png = "0.17.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
