[package]
name = "artspace-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "artspace-app"
edition = "2021"
rust-version = "1.57"

[[bin]]
name = "artspace-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.2.1", features = ["codegen"] }

[dependencies]
artspace-core = { path = "../../core" }
serde_json = "1.0.89"
serde = { version = "1.0.148", features = ["derive"] }
tauri = { version = "1.2.1", features = ["api-all"] }
clap = { version = "4.0.29", features = ["derive"] }
ndarray-npy = "0.8.1"
ndarray = "0.15.6"
png = "0.17.7"
tokio = { version = "1.22.0", features = ["full"] }
anyhow = "1.0.66"
reqwest = "0.11.13"
async-std = "1.12.0"
tempfile = "3.3.0"
tsar-rs = { git = "https://github.com/brian14708/tsar", version = "0.1.0" }
futures = "0.3.25"
lazy_static = "1.4.0"
rayon = "1.6.0"
image = "0.24.5"
nshare = "0.9.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
